# client_data_app

./: .gitignore  CDA.slnx  CDA.vcxproj  CDA.vcxproj.filters  CMakeLists.txt  README.md  build.bat
CDA/x64/Debug/: CDA.exe.recipe  vc145.idb
client_data_app/src/infrastructure/: infrastructure.h
client_data_app/src/test/: create_create_data_dir.cpp  create_create_original_file.cpp  path_get_exe_dir_path.cpp  path_get_original_file_path.cpp  path_is_file_exist.cpp  services_inputs_is_num_in_range.cpp  services_inputs_read_num_from_to.cpp  services_inputs_try_read_num_test.cpp
include/: infrastructure.h  inputs.h  main_screens.h
include/cli/main_screens/: main_screens.h
include/controller/helper/: h_handle_file_exist.h
include/controller/main_use_cases/: handle_start_program.h
include/file_ops/: file_ops.h
include/platform_ops/create/: create.h
include/platform_ops/paths/: paths.h
src/: main.cpp
src/file_ops/: file_ops.cpp
tests/: create_create_data_dir.cpp  create_create_original_file.cpp  path_get_original_file_path.cpp  services_inputs_is_num_in_range.cpp  services_inputs_read_num_from_to.cpp  services_inputs_try_read_num_test.cpp  tests_main.cpp
tests/controller/: test_h_handle_file_exist.cpp
tests/file_ops/: test_get_all_clients.cpp
tests/platform_ops/: create_create_data_dir.cpp  create_create_original_file.cpp  path_get_exe_dir_path.cpp  path_get_original_file_path.cpp  path_is_file_exist.cpp
tests/services/: services_inputs_is_num_in_range.cpp  services_inputs_read_num_from_to.cpp  services_inputs_try_read_num_test.cpp
(+38 files in other folders)
